# buildwise-rs

./: .gitignore  Cargo.toml  LICENSE
crates/api/: Cargo.toml
crates/api/src/: constants.rs  error.rs  main.rs
crates/api/src/auth/: mod.rs
crates/api/src/git/: mod.rs  parse.rs  repos.rs
crates/api/src/openai/: completion.rs  fine_tuning.rs  mod.rs
crates/api/src/v1/: mod.rs  routes.rs
crates/api/src/v1/analysis/: mod.rs
crates/api/src/v1/auth/: mod.rs
crates/api/src/v1/repos/: mod.rs
crates/cli/: Cargo.toml
