[workspace]
resolver = "2"
members = [
    "crates/api",
    "crates/cli",
    # add ci actions and webapp in the future
]

[workspace.dependencies]
axum = { version = "0.7.3" }
openai-api-rs = { version = "3.0.1", default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.68", default-features = false }
tokio = { version = "1.0", default-features = false, features = ["full"] }
