[workspace]
resolver = "2"
members = [
    "crates/api",
    "crates/cli",
    # add ci actions and webapp in the future
]

[workspace.dependencies]
anyhow = { version = "1.0.79" }
axum = { version = "0.7.3" }
dotenvy = { version = "0.15.7", default-features = false }
git2 = { version = "0.18.1", default-features = false }
openai-api-rs = { version = "4.0.0", default-features = false }
# openai-api-rs = { git = "https://github.com/d-roak/openai-api-rs", default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.68", default-features = false }
tokio = { version = "1.0", default-features = false, features = ["full"] }
uuid = { version = "1.6.1", features = ["v4", "fast-rng", "macro-diagnostics"]}
